--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container"> 
-         <h2 id="pitanje">pitanje</h2>
+         <h2 id="pitanje">Pitanje</h2>
          <div class="pitanja">
 
          </div>
